--- a/gae-python/app.yaml
+++ b/gae-python/app.yaml
@@ -15,7 +15,7 @@
 # Author: Marc Cohen
 #
 
-application: try-prediction
+application: mpelembe-prediction
 version: 1
 runtime: python27
 api_version: 1
